Opened 5 years ago

Closed 4 years ago

#9488 closed defect (fixed)

out of range pts for timecode in mov

Reported by: dave rice Owned by:
Priority: normal Component: undetermined
Version: git-master Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Summary of the bug:

When adding a timecode to a mov output, I get an error:

[mov @ 0x125827000] Application provided duration: -9223372036854775808 / timestamp: -9223372036854775808 is out of range for mov/mp4 format
[mov @ 0x125827000] pts has no value

How to reproduce:

ffmpeg -y -f lavfi -i color -metadata "timecode=00:00:00:00" -t 1 test.mov

full output:

% ffmpeg -y -f lavfi -i color -metadata "timecode=00:00:00:00" -t 1 test.mov
ffmpeg version 4.4.1 Copyright (c) 2000-2021 the FFmpeg developers
  built with Apple clang version 13.0.0 (clang-1300.0.29.3)
  configuration: --prefix=/opt/homebrew/Cellar/ffmpeg/4.4.1 --enable-shared --enable-pthreads --enable-version3 --cc=clang --host-cflags= --host-ldflags= --enable-ffplay --enable-gnutls --enable-gpl --enable-libaom --enable-libbluray --enable-libdav1d --enable-libmp3lame --enable-libopus --enable-librav1e --enable-librubberband --enable-libsnappy --enable-libsrt --enable-libtesseract --enable-libtheora --enable-libvidstab --enable-libvorbis --enable-libvpx --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxml2 --enable-libxvid --enable-lzma --enable-libfontconfig --enable-libfreetype --enable-frei0r --enable-libass --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libspeex --enable-libsoxr --enable-libzmq --enable-libzimg --disable-libjack --disable-indev=jack --enable-avresample --enable-videotoolbox
  libavutil      56. 70.100 / 56. 70.100
  libavcodec     58.134.100 / 58.134.100
  libavformat    58. 76.100 / 58. 76.100
  libavdevice    58. 13.100 / 58. 13.100
  libavfilter     7.110.100 /  7.110.100
  libavresample   4.  0.  0 /  4.  0.  0
  libswscale      5.  9.100 /  5.  9.100
  libswresample   3.  9.100 /  3.  9.100
  libpostproc    55.  9.100 / 55.  9.100
Input #0, lavfi, from 'color':
  Duration: N/A, start: 0.000000, bitrate: N/A
  Stream #0:0: Video: rawvideo (I420 / 0x30323449), yuv420p, 320x240 [SAR 1:1 DAR 4:3], 25 tbr, 25 tbn, 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (rawvideo (native) -> h264 (libx264))
Press [q] to stop, [?] for help
[libx264 @ 0x121829200] using SAR=1/1
[libx264 @ 0x121829200] using cpu capabilities: ARMv8 NEON
[libx264 @ 0x121829200] profile High, level 1.3, 4:2:0, 8-bit
[libx264 @ 0x121829200] 264 - core 163 r3060 5db6aa6 - H.264/MPEG-4 AVC codec - Copyleft 2003-2021 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=7 lookahead_threads=1 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=25 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00
[mov @ 0x121828000] Application provided duration: -9223372036854775808 / timestamp: -9223372036854775808 is out of range for mov/mp4 format
[mov @ 0x121828000] pts has no value
Output #0, mov, to 'test.mov':
  Metadata:
    timecode        : 00:00:00:00
    encoder         : Lavf58.76.100
  Stream #0:0: Video: h264 (avc1 / 0x31637661), yuv420p(progressive), 320x240 [SAR 1:1 DAR 4:3], q=2-31, 0.04 fps, 12800 tbn
    Metadata:
      encoder         : Lavc58.134.100 libx264
    Side data:
      cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: N/A
frame=   25 fps=0.0 q=-1.0 Lsize=       3kB time=00:00:00.88 bitrate=  26.2kbits/s speed= 118x    
video:1kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 152.185318%
[libx264 @ 0x121829200] frame I:1     Avg QP: 9.00  size:    63
[libx264 @ 0x121829200] frame P:6     Avg QP:10.17  size:    22
[libx264 @ 0x121829200] frame B:18    Avg QP:12.67  size:    15
[libx264 @ 0x121829200] consecutive B-frames:  4.0%  0.0%  0.0% 96.0%
[libx264 @ 0x121829200] mb I  I16..4: 100.0%  0.0%  0.0%
[libx264 @ 0x121829200] mb P  I16..4:  0.0%  0.0%  0.0%  P16..4:  0.0%  0.0%  0.0%  0.0%  0.0%    skip:100.0%
[libx264 @ 0x121829200] mb B  I16..4:  0.0%  0.0%  0.0%  B16..8:  0.0%  0.0%  0.0%  direct: 0.0%  skip:100.0%
[libx264 @ 0x121829200] 8x8 transform intra:0.0%
[libx264 @ 0x121829200] coded y,uvDC,uvAC intra: 0.0% 0.0% 0.0% inter: 0.0% 0.0% 0.0%
[libx264 @ 0x121829200] i16 v,h,dc,p: 93%  0%  7%  0%
[libx264 @ 0x121829200] i8c dc,h,v,p: 100%  0%  0%  0%
[libx264 @ 0x121829200] Weighted P-Frames: Y:0.0% UV:0.0%
[libx264 @ 0x121829200] kb/s:3.64

Patches should be submitted to the ffmpeg-devel mailing list and not this bug tracker.

Change History (4)

comment:1 by Balling, 5 years ago

Status: newopen

Looks like #9328 is the duplicate of this. This is a minimum value for a long.

Last edited 5 years ago by Balling (previous) (diff)

comment:2 by electron.rotoscope, 4 years ago

In case it helps track down the issue, some more info:

As far as I can tell the timecode track is in fact being added, and it shows up in e.g. QuickTime Player 7, there's just this error coming out also. It does not happen when the output file is .mkv or .mxf

I am seeing this same error in the scenarios of:

  • The latest version, 2022-02-21-git-b8e58f0858-full_build-www.gyan.dev
  • The windows-64 binary of ffmpeg 4.4.1 from https://ffbinaries.com/downloads, but not from the windows-64 binary of ffmpeg 4.2.1 from same
  • Using the option -timecode 00:00:00:00 instead of the above mentioned -metadata "timecode=00:00:00:00" (and if the option is removed, the command doesn't generate that error)
  • 23.976 files using 24F timecode
  • 29.97 files using DF timecode
Last edited 4 years ago by electron.rotoscope (previous) (diff)

comment:4 by Balling, 4 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.